# ckb-debugger-online

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
ckb-standalone-debugger/: Cargo.toml  README.md
ckb-standalone-debugger/.github/workflows/: release.yml  rust.yml
ckb-standalone-debugger/ckb-debugger/: .gitignore  Cargo.toml  README.md
ckb-standalone-debugger/ckb-debugger/docs/: coverage.md  wasm.md
ckb-standalone-debugger/ckb-debugger/examples/: Makefile  exec.json  exec.md  fib.flamegraph  fib.md  file_write  file_write.c  file_write.md  mock_raw_tx.json  mock_tx.md  spawn.json  spawn.md  wasm_wasi.js
ckb-standalone-debugger/ckb-debugger/src/: api.rs  arch_wasm.rs  arch_wasm_wasi.rs  instruction_decode.rs  lib.rs  machine_analyzer.rs  main.rs  misc.rs  mock_tx_analyzer.rs  mock_tx_embed.rs  syscall_elf_dumper.rs  syscall_file_operation.rs  syscall_file_stream.rs  syscall_file_write.rs  syscall_random.rs  syscall_stdio.rs  syscall_timestamp.rs
ckb-standalone-debugger/ckb-debugger/tests/: test_command.rs
ckb-standalone-debugger/ckb-mock-tx-types/: README.md
ckb-standalone-debugger/ckb-vm-debug-utils/: Cargo.toml
ckb-standalone-debugger/ckb-vm-debug-utils/examples/: gdb_remote_protocol_debugger.rs  gdbstub_debugger.rs
ckb-standalone-debugger/ckb-vm-debug-utils/src/: elf_dumper.rs  gdbstub.rs  stdio.rs
ckb-standalone-debugger/ckb-vm-pprof/: Cargo.toml
ckb-standalone-debugger/ckb-vm-pprof-converter/: Cargo.toml
ckb-standalone-debugger/ckb-vm-pprof-converter/src/: main.rs
ckb-standalone-debugger/ckb-vm-pprof-protos/: Cargo.toml  build.rs
ckb-standalone-debugger/ckb-vm-pprof-protos/src/: mod.rs
ckb-standalone-debugger/ckb-vm-pprof/src/: lib.rs  main.rs
ckb-standalone-debugger/ckb-vm-signal-profiler/: Cargo.toml
ckb-standalone-debugger/ckb-vm-signal-profiler/examples/: simple.rs
ckb-standalone-debugger/ckb-vm-signal-profiler/src/: frames.rs  lib.rs  timer.rs
docs/: BUILD.md
scripts/: build-wasm.sh
src/: App.tsx  index.css  main.tsx
src/components/: ErrorBoundary.tsx  ExampleSelector.tsx  FileUploader.tsx  ModeSelector.tsx  OutputConsole.tsx  ParamsEditor.tsx  Toast.tsx  TxFetcher.tsx  index.ts
src/hooks/: useDebugger.ts
src/lib/: examples.ts  i18n.tsx  txConverter.ts  wasmer.ts
src/lib/ckb-debugger-wasm/: ckb_debugger.d.ts  ckb_debugger.js  ckb_debugger_bg.wasm  ckb_debugger_bg.wasm.d.ts  package.json
