[workspace]
resolver = "2"
members = [
    "ckb-debugger",
    "ckb-vm-debug-utils",
    "ckb-vm-pprof",
    "ckb-vm-pprof-converter",
    "ckb-vm-pprof-protos",
    "ckb-vm-signal-profiler",
]

[workspace.package]
version = "1.0.0"

[workspace.dependencies]
# CKB dependencies
ckb-chain-spec = "=1.0.0"
ckb-hash = "=1.0.0"
ckb-jsonrpc-types = "=1.0.0"
ckb-script = { version = "=1.0.0", default-features = false, features = ["flatmemory"] }
ckb-traits = "=1.0.0"
ckb-types = "=1.0.0"
ckb-vm = { version = "=0.24.14", default-features = false, features = ["pprof"] }

# Crates defined in current workspace
ckb-debugger = { path = "ckb-debugger", version = "1.0.0" }
ckb-vm-debug-utils = { path = "ckb-vm-debug-utils", version = "1.0.0" }
ckb-vm-pprof = { path = "ckb-vm-pprof", version = "1.0.0" }
ckb-vm-pprof-converter = { path = "ckb-vm-pprof-converter", version = "1.0.0" }
ckb-vm-pprof-protos = { path = "ckb-vm-pprof-protos", version = "1.0.0" }
ckb-vm-signal-profiler = { path = "ckb-vm-signal-profiler", version = "1.0.0" }

# CKB VM contribs
ckb-mock-tx-types = "1.0.0"
ckb-vm-syscall-tracer = { version = "1.0.0", default-features = false }
ckb-vm-fuzzing-utils = "1.0.0"
protobuf-ckb-syscalls = "1.0.0"

# Other common crates
addr2line = "0.21"
byteorder = "1"
bytes = "1"
env_logger = "0.11"
gdbstub = "0.7"
gdbstub_arch = "0.3"
goblin = "0.4"
hex = "0.4"
libc = "0.2"
log = "0.4.0"
nix = { version = "0.30", features = ["fs", "signal"] }
probe = "0.5"
prost-reflect = { version = "0.16.0", features = ["derive", "text-format"] }
protoc-bin-vendored = "3.1"
protobuf-codegen = "3.7"
protobuf = { version = "3.7", features = ["with-bytes"] }
rand = "0.8.5"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_plain = "1.0"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3", features = ["Storage", "Window", "console"] }
