[package]
name = "ckb-vm-pprof"
version.workspace = true
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2024"
description = "Statistical CKB script cycles consumption flame graph"
license = "MIT"

[dependencies]
clap = "2.33"

addr2line.workspace = true
ckb-vm.workspace = true
goblin.workspace = true
