[package]
name = "ckb-vm-signal-profiler"
version.workspace = true
edition = "2024"
description = "Linux signal based profiler for ckb-vm, note this is profiling ckb-vm itself, not the programs running in ckb-vm"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
env_logger.workspace = true

[dependencies]
addr2line.workspace = true
ckb-vm = { workspace = true, features = ["asm"] }
log.workspace = true
nix.workspace = true
protobuf.workspace = true
ckb-vm-pprof-protos.workspace = true
